
= rufus-scheduler CHANGELOG.txt


== rufus-scheduler - 1.0.8    not yet released

- todo  #21193 : spinned CronLine out to rufus/cronline.rb
- bug   #20893 : something unschedule(every_job) not working when job was
                 active (performing). Fixed.


== rufus-scheduler - 1.0.7    released 2008/06/16

- todo  #20669 : implemented CronJob.next_time()
- todo  #20667 : now passing params to schedule() blocks as well.
- bug   #20648 : find_schedulable(tag) broken. Fixed.


== rufus-scheduler - 1.0.6    released 2008/05/02

- bug   #20476 : no cron jobs on sundays (wday == 0). Fixed.
                 (thanks to Manfred Usselmann)
- todo  #19619 : added :thread_name options to Scheduler.new
- source moved to http://github.com/jmettraux/rufus-scheduler


== rufus-scheduler - 1.0.5    released 2008/03/17

- bug   #18363 : constrained precision to 0.0 < p <= 1.0 - s188
- todo  #18821 : best effort drift correction integrated - s187
- bug   #18513 : 0 seconds and :drop_seconds => "0m". Fixed - s186


== rufus-scheduler - 1.0.4    released 2008/02/29

- todo  #18474 : implemented to_duration_array() - s183
- todo  #18472 : added Rufus::to_time_string - s181


== rufus-scheduler - 1.0.2    released 2008/01/26

- patch #17505 : added params :first_at and :first_in for schedule_every()
                 a patch by John Didion - s115


== rufus-scheduler - 1.0    released 2008/01/24

- initial release after "openwferu-scheduler" - 0.9.16
