@@ -4,6 +4,7 @@
 
 == rufus-scheduler - 1.0.8    not yet released
 
+- todo  #21194 : added trigger_thread to Job class
 - todo  #21193 : spinned CronLine out to rufus/cronline.rb
 - bug   #20893 : something unschedule(every_job) not working when job was
                  active (performing). Fixed.
